expo_output.log
Starting project at /app
React Compiler enabled
Starting Metro Bundler
The following packages should be updated for best compatibility with the installed expo version:
  @react-native-picker/picker@2.11.4 - expected version: 2.11.1
  expo@54.0.27 - expected version: ~54.0.29
  expo-constants@18.0.11 - expected version: ~18.0.12
  expo-router@6.0.17 - expected version: ~6.0.19
Your project may not work correctly until you install the expected versions of the packages.
Waiting on http://localhost:8081
Logs for your project will appear below.
Web node_modules/expo-router/entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundling failed 2954ms node_modules/expo-router/entry.js (840 modules)

Metro error: SyntaxError: /app/app/(tabs)/index.tsx: Identifier 'React' has already been declared. (2:7)

[0m [90m 1 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
[31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
 [90m   |[39m        [31m[1m^[22m[39m
 [90m 3 |[39m [36mimport[39m { [33mStyleSheet[39m[33m,[39m [33mText[39m[33m,[39m [33mView[39m[33m,[39m [33mButton[39m } [36mfrom[39m [32m"react-native"[39m[33m;[39m
 [90m 4 |[39m [36mimport[39m { [33mActivityForm[39m } [36mfrom[39m [32m"../../components/ActivityForm"[39m[33m;[39m
 [90m 5 |[39m [36mimport[39m { [33mActivityList[39m } [36mfrom[39m [32m"../../components/ActivityList"[39m[33m;[39m[0m

Call Stack
  <unknown> (app/(tabs)/index.tsx:2:8)
λ node_modules/expo-router/node/render.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 96.7% (1064/1082)
λ Bundling failed 3041ms node_modules/expo-router/node/render.js (1125 modules)
Web node_modules/expo-router/_error.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 77.0% (186/212)
Web Bundled 6255ms node_modules/expo-router/_error.js (323 modules)
 LOG  [web] Logs will appear in the browser console
Web node_modules/expo-router/entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundling failed 1552ms node_modules/expo-router/entry.js (839 modules)

Metro error: SyntaxError: /app/app/(tabs)/index.tsx: Identifier 'React' has already been declared. (2:7)

[0m [90m 1 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
[31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
 [90m   |[39m        [31m[1m^[22m[39m
 [90m 3 |[39m [36mimport[39m { [33mStyleSheet[39m[33m,[39m [33mText[39m[33m,[39m [33mView[39m[33m,[39m [33mButton[39m } [36mfrom[39m [32m"react-native"[39m[33m;[39m
 [90m 4 |[39m [36mimport[39m { [33mActivityForm[39m } [36mfrom[39m [32m"../../components/ActivityForm"[39m[33m;[39m
 [90m 5 |[39m [36mimport[39m { [33mActivityList[39m } [36mfrom[39m [32m"../../components/ActivityList"[39m[33m;[39m[0m

Call Stack
  <unknown> (app/(tabs)/index.tsx:2:8)
λ node_modules/expo-router/node/render.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 91.4% (1027/1074)
λ Bundling failed 1600ms node_modules/expo-router/node/render.js (1074 modules)
Web Bundled 57ms node_modules/expo-router/_error.js (1 module)
 LOG  [web] Logs will appear in the browser console
Web node_modules/expo-router/entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundling failed 1158ms node_modules/expo-router/entry.js (690 modules)

Metro error: SyntaxError: /app/app/(tabs)/index.tsx: Identifier 'React' has already been declared. (2:7)

[0m [90m 1 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
[31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m [33mReact[39m [36mfrom[39m [32m"react"[39m[33m;[39m
 [90m   |[39m        [31m[1m^[22m[39m
 [90m 3 |[39m [36mimport[39m { [33mStyleSheet[39m[33m,[39m [33mText[39m[33m,[39m [33mView[39m[33m,[39m [33mButton[39m } [36mfrom[39m [32m"react-native"[39m[33m;[39m
 [90m 4 |[39m [36mimport[39m { [33mActivityForm[39m } [36mfrom[39m [32m"../../components/ActivityForm"[39m[33m;[39m
 [90m 5 |[39m [36mimport[39m { [33mActivityList[39m } [36mfrom[39m [32m"../../components/ActivityList"[39m[33m;[39m[0m

Call Stack
  <unknown> (app/(tabs)/index.tsx:2:8)
λ Bundling failed 1183ms node_modules/expo-router/node/render.js (1074 modules)
Web Bundled 18ms node_modules/expo-router/_error.js (1 module)
 LOG  [web] Logs will appear in the browser console
